fix issue with vertical transition jump

--- a/public/stylesheets/widget-styles.less
+++ b/public/stylesheets/widget-styles.less
@@ -56,7 +56,7 @@ body, html {
 }
 
 .chalkboard-note .note-content {
-  padding: 25px 0px;
+  padding: 0px 0px;
 }
 
 
@@ -103,7 +103,6 @@ body, html {
 }
 
 .spiral-note .note-content {
-  margin-top: 10px;
   height: 100%;
   background-image: url('../images/notebooklines.png');
   padding: 0px 0px;
